RESOLVED FIXED133882
REGRESSION: Mountain Lion: Gmail's "in new window" view of mail threads is very slow to load its content
https://bugs.webkit.org/show_bug.cgi?id=133882
Summary REGRESSION: Mountain Lion: Gmail's "in new window" view of mail threads is ve...
Alexey Proskuryakov
Reported 2014-06-13 14:20:33 PDT
Steps to reproduce: 1. Sign into a gmail account at mail.google.com, and view your Inbox. 2. Select any email thread. 3. Click on the diagonal arrow (that points to ~2 o'clock) next to the printer icon at the top right corner of the email thread region. This arrow icon is supposed to open the email thread in a new window. Instead, we get a blank new window for a long time, and it only loads after several minutes. <rdar://problem/17271965>
Attachments
proposed fix (10.51 KB, patch)
2014-06-13 14:27 PDT, Alexey Proskuryakov
beidson: review+
with a typo fix (10.50 KB, patch)
2014-06-13 14:59 PDT, Alexey Proskuryakov
no flags
more build fix (10.50 KB, patch)
2014-06-13 16:39 PDT, Alexey Proskuryakov
no flags
Patch for EWS v1 (10.53 KB, patch)
2014-06-26 14:20 PDT, Brady Eidson
no flags
Alexey Proskuryakov
Comment 1 2014-06-13 14:27:52 PDT
Created attachment 233077 [details] proposed fix
Alexey Proskuryakov
Comment 2 2014-06-13 14:59:11 PDT
Created attachment 233080 [details] with a typo fix
Alexey Proskuryakov
Comment 3 2014-06-13 16:39:12 PDT
Created attachment 233091 [details] more build fix
Mark Lam
Comment 4 2014-06-16 17:05:11 PDT
(In reply to comment #3) > Created an attachment (id=233091) [details] > more build fix Does this need another build fix?
Brady Eidson
Comment 5 2014-06-26 14:20:35 PDT
Created attachment 233933 [details] Patch for EWS v1
WebKit Commit Bot
Comment 6 2014-06-26 16:16:06 PDT
Comment on attachment 233933 [details] Patch for EWS v1 Clearing flags on attachment: 233933 Committed r170503: <http://trac.webkit.org/changeset/170503>
WebKit Commit Bot
Comment 7 2014-06-26 16:16:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.