Source/WebCore/platform/network/cf/ResourceRequest.h
@@ -108,6 +108,8 @@ namespace WebCore {
         static bool httpPipeliningEnabled();
         static void setHTTPPipeliningEnabled(bool);
 
+        static bool resourcePrioritiesEnabled();
+
 #if PLATFORM(COCOA)
         static bool useQuickLookResourceCachingQuirks();
 #endif
@@ -149,6 +151,24 @@ namespace WebCore {
         String m_cachePartition;
 #endif
     };
+
+    inline bool ResourceRequest::resourcePrioritiesEnabled()
+    {
+#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 10100
+    return true;
+#elif PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED < 10100
+    // See <rdar://problem/16518595>, <rdar://problem/17168793> for issues we had before OS X 10.10.
+    // HTTP Pipelining could be enabled for experiments, but there is no point in doing so on old OS versions,
+    // and that can't work well because of the above issues.
+    ASSERT(!httpPipeliningEnabled());
+    return false;
+#elif PLATFORM(IOS)
+    return true;
+#elif PLATFORM(WIN)
+    return false;
+#endif
+    }
+
 
 } // namespace WebCore
 
